--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,20 +2,20 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/demoDb?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/helping?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
     username: root
-    password: 123
+    password: 123456
 application:
   url: http://wzhj.free.idcfengye.com
 weixin:
   appId: wxb0a5f97326024a6c
   appSecret: 853ba807fd9d0cf721813dfe32909070
 
-mybatis:
-  configuration:
-    map-underscore-to-camel-case: true
-  mapper-locations: classpath*:/mapper/**/*.xml
+#mybatis:
+#  configuration:
+#    map-underscore-to-camel-case: true
+#  mapper-locations: classpath*:/mapper/**/*.xml
 security:
-  urlPatterns: /helping/xx/*,/helping/aa/* ##需要登录的URL，以逗号分隔
+  urlPatterns: /helping/api/*,/helping/aa/* ##需要登录的URL，以逗号分隔
 
 
